Implement All user Authentication Successfully
